# address_book_notes_file_sorter

./: .gitignore  README.md  abclasses.py  main.py  mainfunc.py  pyproject.toml
classes/: abclasses.py  notes.py  uiclasses.py
handlers/: sorter.py
project_13/: main.py
project_13/classes/: abclasses.py  exceptionclasses.py  notes.py  uiclasses.py
project_13/data/: logs.txt
